--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,6 +1,6 @@
 /* Background color of the navbar */
 .navbar-collapse {
-    background-color: #004080; /* Replace with your desired color */
+    background-color: #071b30; /* Replace with your desired color */
 }
 
 /* Color of links in the navbar */
